--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,5 +15,8 @@
  */
 
 body {
-background-image: url(/assets/images/back_ground.jpeg);
+	background-image: url(/back_ground.jpeg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; 
 }
