--- a/app/views/tree_builder/vector_processor.html.erb
+++ b/app/views/tree_builder/vector_processor.html.erb
@@ -4,6 +4,6 @@
 	<body>
 		<h2 align="center"><%= button_to "Back", tree_builder_path, method: :get, params: { str: @string },  class: 'button' %></h2>
 		<h1 align="center">Vector Processor</h2>
-		<div id="vector_processor"></div>
+		<div align="center"><canvas id="vector_processor"></canvas></div>
 	</body>
 </html>
